--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,6 @@
       <strong>We're sorry but motherhackers doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <!-- <script src="./heatmap/leaflet-heatmap.js"></script> -->
   </body>
 </html>
